<resources>
    <string name="app_name">My Movie!</string>
    <string name="action_settings">Settings</string>
    <string name="err_msg_search">Enter a valid search term</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">My Movie!</string>
    <string name="slide_1_desc">Your One Stop for all movies and tv shows.</string>

    <string name="slide_2_title">Movies</string>
    <string name="slide_2_desc">Get all the movie info you need.</string>

    <string name="slide_3_title">TV Shows</string>
    <string name="slide_3_desc">Don\'t forget, we have TV shows too!</string>

    <string name="slide_4_title">Let\'s Talk</string>
    <string name="slide_4_desc">Now let the world know how you feel about a movie or show.</string>

    <string name="search1_hint">Enter the movie or tv show</string>
    <string name="search_header">Search</string>

    <string name="search_button">Search</string>
    <string name="search_hint">Search by movie title</string>
    <string name="search_type">movie</string>
    <string name="default_poster">http://www.imdb.com/images/nopicture/medium/film.png</string>
    <string name="snackbar_title_not_found">The movie title you entered was not found</string>
    <string name="snackbar_title_empty">Please enter a movie title</string>
    <string name="network_not_available">Network not available! Please connect to the Internet.</string>
    <string name="title">Title</string>
    <string name="example_title">Wreck-It Ralph</string>
    <string name="released">Released</string>
    <string name="example_release">02 Nov 2012</string>
    <string name="runtime">Runtime</string>
    <string name="example_runtime">101 min</string>
    <string name="director">Director</string>
    <string name="example_director">Rich Moore</string>
    <string name="Genre">Genre</string>
    <string name="example_genre">Animation, Adventure, Comedy</string>
    <string name="Writer">Writer(s)</string>
    <string name="example_writer">Rich Moore (story), Phil Johnston (story), Jim Reardon (story), Phil Johnston (screenplay), Jennifer Lee (screenplay), John C. Reilly (additional story material)</string>
    <string name="actors">Actors</string>
    <string name="example_actors">John C. Reilly, Sarah Silverman, Jack McBrayer, Jane Lynch</string>
    <string name="plot">Plot</string>
    <string name="example_full_plot">"Wreck-It Ralph longs to be as beloved as his game's perfect Good Guy, Fix-It Felix. Problem is, nobody loves a Bad Guy. But they do love heroes... so when a modern, first-person shooter game arrives featuring tough-as-nails Sergeant Calhoun, Ralph sees it as his ticket to heroism and happiness. He sneaks into the game with a simple plan -- win a medal -- but soon wrecks everything, and accidentally unleashes a deadly enemy that threatens every game in the arcade. Ralph's only hope? Vanellope von Schweetz, a young troublemaking \"glitch\" from a candy-coated cart racing game who might just be the one to teach Ralph what it means to be a Good Guy. But will he realize he is good enough to become a hero before it's \"Game Over\" for the entire arcade?"</string>
    <string name="example_rated">PG-13</string>
    <string name="rated">Rated</string>
    <string name="awards">Awards</string>
    <string name="example_awards">Oscar 2016</string>
    <string name="language">Language</string>
    <string name="example_language">English</string>
    <string name="country">Country</string>
    <string name="example_country">USA</string>
    <string name="example_tmeter">63%</string>
    <string name="tmeter">Tomato Meter</string>
    <string name="example_tmtrating">Tomato Rating: 7.9</string>
    <string name="example_tumeter">67%</string>
    <string name="example_tmturating">4.9</string>
    <string name="turl">Tomato URL</string>
    <string name="example_turl">Placeholder</string>
    <string name="dvd">DVD</string>
    <string name="example_dvd">DVD</string>
    <string name="boxoffice">Box Office</string>
    <string name="example_boxoffice">3.8mil</string>
    <string name="production">Production</string>
    <string name="example_production">Production</string>
    <string name="website">Website</string>
    <string name="example_website">Placeholder</string>
    <string name="tconsensus">Tomato Consensus</string>
    <string name="exampletconsensus">Placeholder</string>
    <string name="banner">ca-app-pub-2422266550181212/4863626480</string>
    <string name="B2">ca-app-pub-2422266550181212/1770559285</string>
    <string name="B3">ca-app-pub-2422266550181212/8735422887</string>
</resources>

