<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_protection_scrim_height"
                android:layout_gravity="bottom"
                android:layout_alignBottom="@+id/main_backdrop"
                android:background="@drawable/photo_background_protection"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                />

            <ImageView
                android:id="@+id/main_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:transitionName="poster"
                app:layout_collapseMode="parallax" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            app:useDefaultMargins="true"
            android:layout_height="match_parent"
            app:columnCount="2">

            <TextView
                style="@style/left_column_bold"
                android:text="TOMATO METER"
                app:layout_column="0"
                app:layout_row="0" />

            <ImageView
                android:id="@+id/img1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_column="0"
                app:layout_row="1"
                app:layout_gravity="center"/>


            <TextView
                app:layout_column="0"
                app:layout_row="2"
                tools:text="@string/example_tmeter"
                style="@style/left_column_bold"
                android:id="@+id/grid_tmeter"
                app:layout_gravity="center"/>

            <TextView
                app:layout_column="1"
                app:layout_row="2"
                tools:text="@string/example_tmtrating"
                style="@style/right_column_normal"
                android:id="@+id/grid_tmtrating"/>

            <ProgressBar
                android:id="@+id/pbar1"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                app:layout_column="1"
                android:indeterminate="false"
                android:maxHeight="25dip"
                android:minHeight="25dip"
                app:layout_row="1"
                android:progressDrawable="@drawable/greenprogress" />

            <ProgressBar
                android:id="@+id/pbar2"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                app:layout_column="1"
                android:indeterminate="false"
                android:maxHeight="25dip"
                android:minHeight="25dip"
                app:layout_row="1"
                android:progressDrawable="@drawable/greenprogress2" />

            <TextView
                style="@style/left_column_bold"
                android:text="AUDIENCE SCORE"
                app:layout_column="0"
                app:layout_row="3" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_column="0"
                app:layout_row="4"
                app:layout_gravity="center"/>


            <TextView
                app:layout_column="0"
                app:layout_row="5"
                tools:text="@string/example_tumeter"
                style="@style/left_column_bold"
                android:id="@+id/grid_tumeter"
                app:layout_gravity="center"/>

            <TextView
                app:layout_column="1"
                app:layout_row="5"
                tools:text="@string/example_tmturating"
                style="@style/right_column_normal"
                android:id="@+id/grid_tmturating"/>

            <ProgressBar
                android:id="@+id/pbar3"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                app:layout_column="1"
                android:indeterminate="false"
                android:maxHeight="25dip"
                android:minHeight="25dip"
                app:layout_row="4"
                android:progressDrawable="@drawable/greenprogress" />

            <ProgressBar
                android:id="@+id/pbar4"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                app:layout_column="1"
                android:indeterminate="false"
                android:maxHeight="25dip"
                android:minHeight="25dip"
                app:layout_row="4"
                android:progressDrawable="@drawable/greenprogress2" />

            <TextView
                style="@style/left_column_bold"
                android:text="@string/tconsensus"
                app:layout_column="0"
                app:layout_row="6" />

            <TextView
                app:layout_column="1"
                app:layout_row="6"
                tools:text="@string/exampletconsensus"
                style="@style/right_column_normal"
                android:id="@+id/grid_tconsensus"/>

            <TextView
                style="@style/left_column_bold"
                android:text="@string/turl"
                app:layout_column="0"
                app:layout_row="7" />

            <TextView
                style="@style/left_column_bold"
                android:text="@string/dvd"
                app:layout_column="0"
                app:layout_row="8" />

            <TextView
                app:layout_column="1"
                app:layout_row="8"
                tools:text="@string/example_dvd"
                style="@style/right_column_normal"
                android:id="@+id/grid_dvd"/>

            <TextView
                style="@style/left_column_bold"
                android:text="@string/boxoffice"
                app:layout_column="0"
                app:layout_row="9" />

            <TextView
                app:layout_column="1"
                app:layout_row="9"
                tools:text="@string/example_boxoffice"
                style="@style/right_column_normal"
                android:id="@+id/grid_boxoffice"/>

            <TextView
                style="@style/left_column_bold"
                android:text="@string/production"
                app:layout_column="0"
                app:layout_row="10" />

            <TextView
                app:layout_column="1"
                app:layout_row="10"
                tools:text="@string/example_production"
                style="@style/right_column_normal"
                android:id="@+id/grid_production"/>

            <TextView
                style="@style/left_column_bold"
                android:text="@string/website"
                app:layout_column="0"
                app:layout_row="11" />

            <TextView
                app:layout_column="1"
                app:layout_row="11"
                tools:text="@string/example_website"
                style="@style/right_column_normal"
                android:id="@+id/grid_website"/>

            <TextView
                app:layout_column="1"
                app:layout_row="7"
                tools:text="@string/example_turl"
                style="@style/right_column_normal"
                android:id="@+id/grid_turl"/>


        </android.support.v7.widget.GridLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
